[package]
name = "bevy_mod_picking"
version = "0.6.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A 3D mouse picking and raycasting plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "raycast"]
categories = ["game-engines", "rendering"]
resolver = "2"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "4b1f6f4ebba92fc968124380d5a19e1d2500e2dd", default-features = false, features = [
    "render",
] }
bevy_mod_raycast = { git = "https://github.com/colepoirier/bevy_mod_raycast", branch = "main" }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "4b1f6f4ebba92fc968124380d5a19e1d2500e2dd", default-features = false, features = [
    "bevy_winit",
    "x11",
] }
